--- a/main.css
+++ b/main.css
@@ -1,3 +1,27 @@
+:root {
+
+  --wrong-bg-color: #ff2d2d;
+  --correct-bg-color: #2dff2d;
+
+  --default-bg-gradient1: #fcfcfc;
+  --default-bg-gradient2: #e6e6e6;
+  --wrong-bg-gradient1: #ffb6b6;
+  --wrong-bg-gradient2: #d97171;
+  --correct-bg-gradient1: #b6ffb6;
+  --correct-bg-gradient2: #71d971;
+
+  --default-border-color: #bababa;
+  --wrong-border-color: #750000;
+  --correct-border-color: #007500;
+
+
+
+
+
+
+}
+
+
 .navbar{
   background-color: #262626;
   color: white;
@@ -21,13 +45,12 @@ body {
 
 .game {
   background-color: white;
-  margin-left: 30%;
-  margin-right: 30%;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 20px;
   font-size: 40px;
   border-radius: 15px;
-  position: relative;
-  width: 540px;
+  width: 620px;
   margin-bottom: 10px;
 }
 
@@ -45,26 +68,44 @@ body {
 .answer {
   padding: 20px;
   align-items: center;
+  display: grid;
+  gap: .4rem 3.2rem;
+  grid-template-columns: repeat(auto-fill, 30px);
 }
+
 .answer div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 74px;
+  height: 61px;
   font-size: 20px;
+
   text-align: center;
-  display: inline;
   background-color: LightGrey;
-  border: thin solid black;
+  border: 1px solid var(--default-border-color);
   border-radius: 5px;
+  transition: 700ms;
+  background-image: linear-gradient(var(--default-bg-gradient1), var(--default-bg-gradient2));
 }
 
 .answer div:hover {
   cursor: pointer;
 }
+
+.answer div:active {
+  background-image: linear-gradient(var(--default-bg-gradient2), #a6a6a6);
+}
+
 .toggle {
   margin: auto;
-  width: 7%;
+  width: 100px;
   text-align: center;
   border-radius: 3px;
-  border: thin solid black;
+  border: thin solid darkGrey;
   background-color: #e6e6e6;
+  background-image: linear-gradient(#efefef, #bfbfbf);
 }
 .toggle:hover{
   cursor: pointer;
